fix cookiebanner on small devices, make it fullscreen

--- a/src/theme/main.less
+++ b/src/theme/main.less
@@ -22,8 +22,11 @@
   }
 
   @media only screen and (max-width: 600px) {
-    top: 10px;
-    bottom: 10px;
+    inset: 0;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding-bottom: 100px;
     overflow-y: scroll;
   }
 }
